--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~7.2.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "exceljs": "^1.7.0",
+    "jspdf": "^1.5.3",
     "ngx-bootstrap": "^3.2.0",
     "ngx-mask": "^7.3.6",
     "rxjs": "~6.3.3",
