--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "core-js": "^2.5.4",
     "exceljs": "^1.7.0",
     "jspdf": "^1.5.3",
+    "moment": "^2.24.0",
     "ngx-bootstrap": "^3.2.0",
     "ngx-mask": "^7.3.6",
+    "ngx-moment": "^3.4.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
