--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "exceljs": "^1.7.0",
     "jspdf": "^1.5.3",
     "moment": "^2.24.0",
-    "ngx-bootstrap": "^3.2.0",
+    "ngx-accordion": "0.0.17",
+    "ngx-bootstrap": "^3.3.0",
     "ngx-mask": "^7.3.6",
     "ngx-moment": "^3.4.0",
     "rxjs": "~6.3.3",
