--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "angular-validate-br": "0.1.0-beta",
     "angular2-text-mask": "^9.0.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
